tests/cases/patterns/errors/pattern-ref-ownership-vector-dynamic-suffix-moved.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var values: Vec[own i64] = if true {
    [make_owned(1), make_owned(2)]
  } else {
    [make_owned(3), make_owned(4), make_owned(5)]
  };
  let moved = values[0];
  let ref [.., last] = values;
  drop moved;
  drop values;
  return 0;
}
